[package]
name = "wall-clock"
version = "0.2.0"
edition = "2021"
authors = ["Luke Sneeringer <luke@sneeringer.com>"]
description = "A representation of time as displayed on a wall clock, without date or time zone."
keywords = ["date", "time"]
categories = ["date-and-time"]
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/lukesneeringer/wall-clock"
documentation = "https://docs.rs/wall_clock"
readme = "README.md"
exclude = [
  "/.github/*",
  "/rustfmt.toml",
  "/.prettierrc.yaml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
assert2 = "0.3"
serde_test = "1"

[features]
default = ["serde"]
diesel-pg = ["dep:diesel", "diesel/postgres"]
